Bug 81429 - UI: ACCESSIBILITY: list Language in dialog Format Character/Style does not respond properly to key strokes
Summary: UI: ACCESSIBILITY: list Language in dialog Format Character/Style does not re...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.3.0.2 rc
Hardware: Other All
: low trivial
Assignee: Eike Rathke (retired, only occasionally showing up)
URL:
Whiteboard: target:4.5.0 target:4.3.7 target:4.4.2
Keywords: regression
Depends on:
Blocks:
 
Reported: 2014-07-16 13:19 UTC by Cor Nouws
Modified: 2015-02-15 11:12 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Cor Nouws 2014-07-16 13:19:27 UTC
- choose Format > Character
- tab Font
- select list Language
- press Alt+Down to expand the list
- now type a letter to jump to another language
  - in my case, Dutch is active
  - I type 'e' for 'English XYZ'
- now press Down to travel to another English
  > this fails: the cursor jumps from the list to the box with the active language

(work around: make only one English dialect ;) ... sorry, couldn't resist)
Comment 1 Cor Nouws 2014-07-16 13:19:50 UTC
was fine in old style dialog
Comment 2 Yousuf Philips (jay) (retired) 2014-08-07 06:18:48 UTC
This has to be set as an enhancement as well. :)
Comment 3 Yousuf Philips (jay) (retired) 2014-08-07 18:20:19 UTC
Sorry, my bad. This isnt an enhancement, but not a regression. :)
Comment 4 Cor Nouws 2014-11-26 18:00:10 UTC
(In reply to Jay Philips from comment #3)
> Sorry, my bad. This isnt an enhancement, but not a regression. :)

It was OK before, so why not a regression?
Comment 5 Yousuf Philips (jay) (retired) 2014-11-27 01:05:13 UTC
Well they changed the type of control and when they did the change, the functionality isnt functioning correctly. So it is a bug in the new control.
Comment 6 Cor Nouws 2014-11-27 08:48:54 UTC
And a regression from user perspective :)
Comment 7 Yousuf Philips (jay) (retired) 2014-11-27 10:13:53 UTC
Yes i'd say it was a regression as it worked correctly before, but its not something that could be bibisected to correct the mistake. :D
Comment 8 Cor Nouws 2014-11-27 12:28:50 UTC
OK, clear - sort of ;)
Set to regression again
Comment 9 Matthew Francis 2014-12-29 07:18:08 UTC
Adding Whiteboard:bibisectRequest
Even though this probably results from a UI conversion, identifying the commit may allow it to be raised back to the committer
Comment 10 Cor Nouws 2014-12-29 08:08:14 UTC
@eike

(In reply to Matthew Francis from comment #9)

> Even though this probably results from a UI conversion, identifying the
> commit may allow it to be raised back to the committer

Wasn't that you ?
Comment 11 Eike Rathke (retired, only occasionally showing up) 2015-01-28 11:40:22 UTC
Yes. Feel free to improve my code ;)

This doesn't need a bibisect, code pointer:

svx/source/dialog/langbox.cxx
IMPL_LINK( SvxLanguageComboBox, EditModifyHdl, ...)
the part following
const sal_Int32 nPos = GetEntryPos( aStr);
Comment 12 Cor Nouws 2015-01-28 12:28:53 UTC
(In reply to Eike Rathke from comment #11)
> Yes. Feel free to improve my code ;)

Maybe we meet in Betacowork ;)
Comment 13 Commit Notification 2015-02-12 23:51:55 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a448f1bb9221f30f73574c580b506e00bf2ae61a

Resolves: tdf#81429 select corresponding listbox entry if not current

It will be available in 4.5.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 14 Eike Rathke (retired, only occasionally showing up) 2015-02-13 00:20:04 UTC
Pending review
https://gerrit.libreoffice.org/14457 for 4-4
https://gerrit.libreoffice.org/14458 for 4-3
Comment 15 Commit Notification 2015-02-13 09:58:52 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=dd8a5ecbc0afd7646583fa56b8e6efc3f040012c&h=libreoffice-4-3

Resolves: tdf#81429 select corresponding listbox entry if not current

It will be available in 4.3.7.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 16 Commit Notification 2015-02-13 10:00:16 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-4-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e0f22bb1db655d86923c16e5c2f7d84489d7a63e&h=libreoffice-4-4

Resolves: tdf#81429 select corresponding listbox entry if not current

It will be available in 4.4.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 17 Cor Nouws 2015-02-15 11:12:43 UTC
(In reply to Commit Notification from comment #16)
> Eike Rathke committed a patch related to this issue.
> It has been pushed to "libreoffice-4-4":

Thanks Eike!

(Just wondering later: this can't really be the only place in UI with the same behavior and combination of an edit control and a list box? E.g. Select Style in Writer looks similar from user perspective - I you know how to use it ;) )