Resolves: tdf#81429 select corresponding listbox entry if not current

Change-Id: Ib475a43601ee22d33677ac45cd6ef9dba7e7c431